--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 padding-top:0px; ">
 
 
-                        <img src="img/logo.png" alt="">
+                        <img src="logo.png" alt="">
                         <span style="display: block;">MY BANK</span>
                     </div>
                     <div class="menu-row a Home-btn">HOME</div>
